hphp/hack/test/extracted_from_manual/10-types/81-recursive-case-types-05.hack
// @generated by hh_manual from manual/hack/10-types/81-recursive-case-types.md
// @codegen-command : buck run fbcode//hphp/hack/src/hh_manual:hh_manual extract fbcode/hphp/hack/manual/hack/
case type Tree<T> = shape(
  'data' => T,
  'children' => vec<Tree<T>>,
);

function get_data_bad<T>(Tree<T> $tree): T {
  return $tree['data']; // ERROR: can't access shape fields on a case type
}

function get_data_good<T>(Tree<T> $tree): T {
  if ($tree is shape(...)) {
    return $tree['data']; // OK: narrowed to the shape variant
  }
}
